# hero-cards-game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project.config.json  test.cpp
assets/images/: buttonxcf.xcf  play-btn.xcf
examples/: CMakeLists.txt
examples/flappy-bird/: Button.cpp  Button.hpp  CMakeLists.txt  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameScene.cpp  GameScene.hpp  HomeScene.cpp  HomeScene.hpp  main.cpp  project.config.json
include/: NTTEngine.hpp  main.hpp
src/: Button.cpp  Button.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  GameScene.cpp  GameScene.hpp  HomeScene.cpp  HomeScene.hpp  common.hpp  main.cpp
src/components/: Component.cpp  Component.hpp  ComponentManagement.cpp  ComponentManagement.hpp  Script.cpp  Script.hpp  ScriptManager.cpp  ScriptManager.hpp  components.hpp
src/components/button/: button.cpp  button.hpp
src/components/image/: Img.cpp  Img.hpp
src/components/scripts/: HoverableScript.cpp  HoverableScript.hpp  scripts.hpp
src/components/sprites/: Sprite.cpp  Sprite.hpp
src/components/text/: Text.cpp  Text.hpp
src/cores/: Application.cpp  Application.hpp  ILifetime.hpp  ILoadable.hpp  IRenderable.hpp  Scene.cpp  Scene.hpp  SceneManagement.cpp  SceneManagement.hpp  core.hpp  datatypes.hpp
src/cores/commons/: common.hpp  commons.hpp
src/cores/data/: Texture.cpp  Texture.hpp
src/cores/entities/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Geometry.cpp  Geometry.hpp  IEntity.hpp  IEntityManager.hpp  entities.hpp
src/cores/interfaces/: IConfigurable.hpp  ILifetime.hpp  IRenderable.hpp  IUpdatable.hpp  Loadable.hpp  interfaces.hpp
src/cores/resources/: IResource.hpp  IResourceManager.hpp  ImageResource.cpp  ImageResource.hpp  MockResource.hpp  Resource.cpp  Resource.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager_test.cpp  ResourceType.hpp  Resource_test.cpp  resources.hpp
src/cores/scenes/: IScene.hpp  ISceneManager.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneManager_test.cpp  Scene_test.cpp  scenes.hpp
src/cores/scripts/: IScript.hpp  IScriptManager.hpp  MockScript.hpp  Script.cpp  Script.hpp  ScriptManager.cpp  ScriptManager.hpp  ScriptManager_test.cpp  scripts.hpp
src/cores/scripts/defaults/: FSMScript.cpp  FSMScript.hpp  FSMState.cpp  FSMState.hpp  HoverCheckScript.cpp  HoverCheckScript.hpp  SpriteScript.cpp  SpriteScript.hpp  default_scripts_include.hpp  defaults.hpp
src/entities/: Entity.hpp  entities.hpp
src/inputs/: MouseInput.cpp  MouseInput.hpp
src/renderer/: mouse_api.cpp  mouse_api.hpp  renderer.hpp  texture_api.cpp  texture_api.hpp  window_render_api.cpp  window_render_api.hpp
src/utils/: utils.hpp
src/utils/configuration/: Config.cpp  Config.hpp  Config_test.cpp  ConfigurableObject.cpp  ConfigurableObject.hpp  ConfigurableObject_test.cpp  configutation.hpp
src/utils/distance/: distance.cpp  distance.hpp  distance_test.cpp
src/utils/files/: file_tools.cpp  file_tools.hpp  files.hpp
src/utils/log/: FunctionLog.cpp  FunctionLog.hpp  FunctionLog_test.cpp  log.hpp
src/utils/path/: IPath.hpp  RelativePath.cpp  RelativePath.hpp  ResourcePath.cpp  ResourcePath.hpp  path.hpp  path_test.cpp  path_tools.cpp  path_tools.hpp
src/utils/random/: Random.cpp  Random.hpp  Random_test.cpp
src/utils/timer/: AccTimer.cpp  AccTimer.hpp  DeltaTimer.cpp  DeltaTimer.hpp  timer.hpp
vendors/: CMakeLists.txt
